[gd_scene load_steps=45 format=3 uid="uid://bhm7fdjvppt8b"]

[ext_resource type="Script" uid="uid://5bt5um5g1g3p" path="res://scenes/menus/storybook/components/storybook.gd" id="1_gw8hn"]
[ext_resource type="Theme" uid="uid://cvitou84ni7qe" path="res://scenes/ui_elements/components/theme.tres" id="1_m2ghf"]
[ext_resource type="PackedScene" uid="uid://cgtonist08yxn" path="res://scenes/menus/storybook/components/storybook_page.tscn" id="3_n2i2u"]
[ext_resource type="SpriteFrames" uid="uid://dne3cxrhbjuno" path="res://scenes/menus/storybook/components/storybook_animation.tres" id="3_y0b3i"]
[ext_resource type="Texture2D" uid="uid://bqe8u2t2tsoma" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Disable_3Slides.png" id="5_jl72s"]
[ext_resource type="Texture2D" uid="uid://bxk0fu4vv6wt2" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Hover_3Slides.png" id="6_b2xx3"]
[ext_resource type="Texture2D" uid="uid://dv7kcbngjjwq7" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Blue_3Slides.png" id="7_21r2o"]
[ext_resource type="Texture2D" uid="uid://dcum6i8n2paam" path="res://assets/third_party/tiny-swords/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="8_ywp77"]
[ext_resource type="Texture2D" uid="uid://ccavio2v8sk7c" path="res://assets/third_party/tiny-swords/UI/Banners/Carved_3Slides.png" id="10_4q417"]
[ext_resource type="Texture2D" uid="uid://rwt2v0hex5nm" path="res://assets/third_party/tiny-swords/UI/Ribbons/Ribbon_Yellow_3Slides.png" id="11_ln7yb"]
[ext_resource type="Texture2D" uid="uid://1po5xmfs16ot" path="res://assets/third_party/tiny-swords/UI/Ribbons/Ribbon_BlueLight_3Slides.png" id="12_emw6c"]
[ext_resource type="Texture2D" uid="uid://b6qlxbgr1eq5v" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Left_Pressed.png" id="14_jl72s"]
[ext_resource type="Texture2D" uid="uid://beg3lp7xpkpf2" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Left_Normal.png" id="14_m2ghf"]
[ext_resource type="Texture2D" uid="uid://qs4jy8b1curv" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Left_Hover.png" id="15_jl72s"]
[ext_resource type="Texture2D" uid="uid://c7ey8lnnb4ugg" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Right_Normal.png" id="17_m2ghf"]
[ext_resource type="Texture2D" uid="uid://c24put1gr05cu" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Right_Hover.png" id="18_jl72s"]
[ext_resource type="Texture2D" uid="uid://bgcp50dpx5gd3" path="res://scenes/ui_elements/story_quest_progress/Textures/Arrow_Button_Right_Pressed.png" id="18_m2ghf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e4w0c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iy6d2"]
texture = ExtResource("5_jl72s")
texture_margin_left = 48.0
texture_margin_top = 20.0
texture_margin_right = 32.0
texture_margin_bottom = 28.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_si72l"]
texture = ExtResource("6_b2xx3")
texture_margin_left = 48.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rcupm"]
texture = ExtResource("7_21r2o")
texture_margin_left = 48.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w6oc6"]
texture = ExtResource("8_ywp77")
texture_margin_left = 48.0
texture_margin_top = 20.0
texture_margin_right = 32.0
texture_margin_bottom = 28.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lerkg"]
bg_color = Color(1, 1, 1, 0.152941)
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7k42u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lerkg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7hnk"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.470588)
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lerkg"]
texture = ExtResource("10_4q417")
texture_margin_left = 64.0
texture_margin_top = 12.0
texture_margin_right = 64.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q6hjb"]
texture = ExtResource("10_4q417")
texture_margin_left = 64.0
texture_margin_top = 12.0
texture_margin_right = 64.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.77084, 0.770839, 0.770839, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3vcfk"]
texture = ExtResource("10_4q417")
texture_margin_left = 64.0
texture_margin_top = 12.0
texture_margin_right = 64.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.666569, 0.666569, 0.666569, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bbim3"]
texture = ExtResource("10_4q417")
texture_margin_left = 64.0
texture_margin_top = 12.0
texture_margin_right = 64.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qndbo"]
texture = ExtResource("10_4q417")
texture_margin_left = 64.0
texture_margin_top = 12.0
texture_margin_right = 64.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7k42u"]
content_margin_bottom = 18.0
texture = ExtResource("11_ln7yb")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mu1ca"]
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qmeow"]
content_margin_bottom = 18.0
texture = ExtResource("12_emw6c")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wm85a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q0ncy"]
texture = SubResource("CompressedTexture2D_wm85a")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bk7gi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="Theme" id="Theme_rf3dg"]
default_font_size = 34
BigFlatButton/base_type = &"FlatButton"
BigFlatButton/font_sizes/font_size = 60
Button/colors/font_color = Color(0.12, 0.12, 0.12, 1)
Button/colors/font_disabled_color = Color(0.12, 0.12, 0.12, 0.501961)
Button/colors/font_focus_color = Color(0.05, 0.05, 0.05, 1)
Button/colors/font_hover_color = Color(0.05, 0.05, 0.05, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/icons/icon = null
Button/styles/disabled = SubResource("StyleBoxTexture_iy6d2")
Button/styles/focus = SubResource("StyleBoxTexture_si72l")
Button/styles/hover = SubResource("StyleBoxTexture_rcupm")
Button/styles/normal = SubResource("StyleBoxTexture_rcupm")
Button/styles/pressed = SubResource("StyleBoxTexture_w6oc6")
CheckButton/styles/focus = SubResource("StyleBoxFlat_lerkg")
CheckButton/styles/hover = SubResource("StyleBoxFlat_lerkg")
CheckButton/styles/normal = SubResource("StyleBoxEmpty_7k42u")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_lerkg")
FixedSizeLabel/base_type = &"Label"
FixedSizeLabel/colors/font_color = Color(0, 0, 0, 1)
FixedSizeLabel/font_sizes/font_size = 36
FixedSizeLabel/fonts/font = null
FixedSizeLabelContainer/base_type = &"PanelContainer"
FixedSizeLabelContainer/styles/panel = SubResource("StyleBoxFlat_m7hnk")
FlatButton/colors/font_hover_color = Color(1, 1, 1, 1)
FlatButton/font_sizes/font_size = 24
FlatButton/styles/focus = SubResource("StyleBoxTexture_lerkg")
FlatButton/styles/hover = SubResource("StyleBoxTexture_q6hjb")
FlatButton/styles/hover_pressed = SubResource("StyleBoxTexture_3vcfk")
FlatButton/styles/normal = SubResource("StyleBoxTexture_bbim3")
FlatButton/styles/pressed = SubResource("StyleBoxTexture_3vcfk")
FlatNextButton/base_type = &"FlatButton"
FlatNextButton/styles/normal = SubResource("StyleBoxTexture_qndbo")
GridContainer/constants/h_separation = 32
GridContainer/constants/v_separation = 32
HintLabel/base_type = &"Label"
HintLabel/colors/font_color = Color(1, 1, 1, 1)
HintLabel/colors/font_shadow_color = Color(0, 0, 0, 1)
HintLabel/constants/shadow_offset_x = 2
HintLabel/constants/shadow_offset_y = 2
HintLabel/font_sizes/font_size = 36
HintLabel/fonts/font = null
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 20
MarginContainer/constants/margin_bottom = 16
MarginContainer/constants/margin_left = 16
MarginContainer/constants/margin_right = 16
MarginContainer/constants/margin_top = 16
NPCRibbon/base_type = &"PanelContainer"
NPCRibbon/styles/panel = SubResource("StyleBoxTexture_7k42u")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_mu1ca")
PlayerRibbon/base_type = &"PanelContainer"
PlayerRibbon/styles/panel = SubResource("StyleBoxTexture_qmeow")
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
RichTextLabel/constants/line_separation = 9
VBoxContainer/constants/separation = 32
arrow/base_type = &"Button"
arrow/colors/font_color = Color(0, 0, 0, 1)
arrow/colors/font_disabled_color = Color(0, 0, 0, 1)
arrow/colors/font_focus_color = Color(0, 0, 0, 1)
arrow/colors/font_hover_color = Color(0, 0, 0, 1)
arrow/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
arrow/colors/font_outline_color = Color(0, 0, 0, 1)
arrow/colors/font_pressed_color = Color(0, 0, 0, 1)
arrow/colors/icon_disabled_color = Color(0, 0, 0, 1)
arrow/colors/icon_focus_color = Color(0, 0, 0, 1)
arrow/colors/icon_hover_color = Color(0, 0, 0, 1)
arrow/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
arrow/colors/icon_normal_color = Color(0, 0, 0, 1)
arrow/colors/icon_pressed_color = Color(0, 0, 0, 1)
arrow/constants/align_to_largest_stylebox = 0
arrow/constants/h_separation = 0
arrow/constants/icon_max_width = 0
arrow/constants/outline_size = 0
arrow/styles/disabled = SubResource("StyleBoxTexture_q0ncy")
arrow/styles/focus = SubResource("StyleBoxFlat_bk7gi")
arrow/styles/hover = SubResource("StyleBoxFlat_bk7gi")
arrow/styles/normal = SubResource("StyleBoxFlat_bk7gi")
arrow/styles/pressed = SubResource("StyleBoxFlat_bk7gi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y0b3i"]
texture = ExtResource("14_jl72s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qcyx"]
texture = ExtResource("14_m2ghf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nkrro"]
texture = ExtResource("15_jl72s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xkl6m"]
texture = ExtResource("18_m2ghf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p0vqm"]
texture = ExtResource("17_m2ghf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bnrpt"]
texture = ExtResource("18_jl72s")

[node name="Storybook" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_m2ghf")
script = ExtResource("1_gw8hn")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_e4w0c")

[node name="Background" type="Panel" parent="Panel"]
layout_mode = 2

[node name="PanelContainer" type="CenterContainer" parent="Panel/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Panel/Background/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
sprite_frames = ExtResource("3_y0b3i")
animation = &"book_left"

[node name="StoryBookContent" type="Control" parent="Panel/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/Background/StoryBookContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -365.0
offset_top = -256.0
offset_right = 73.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_top = -20

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Background/StoryBookContent/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Background/StoryBookContent/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="LeftPage" type="MarginContainer" parent="Panel/Background/StoryBookContent/MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Background/StoryBookContent/MarginContainer/ScrollContainer/HBoxContainer/LeftPage"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="Panel/Background/StoryBookContent/MarginContainer/ScrollContainer/HBoxContainer/LeftPage/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="StorybookPage" parent="Panel/Background/StoryBookContent" instance=ExtResource("3_n2i2u")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -272.0
offset_right = 414.0
offset_bottom = 240.0
theme_override_constants/margin_left = 40

[node name="BackButton" type="Button" parent="Panel/Background/StoryBookContent"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 173.0
offset_right = -90.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_next = NodePath("../StorybookPage/VBoxContainer/PlayButton")
theme_type_variation = &"FlatButton"
text = "< back"
flat = true

[node name="Left_Button" type="Button" parent="Panel/Background"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.501
anchor_bottom = 0.501
offset_left = 82.0
offset_top = -49.72
offset_right = 175.0
offset_bottom = 49.28
grow_vertical = 2
theme = SubResource("Theme_rf3dg")
theme_override_styles/focus = SubResource("StyleBoxTexture_y0b3i")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8qcyx")
theme_override_styles/hover = SubResource("StyleBoxTexture_nkrro")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y0b3i")
theme_override_styles/normal = SubResource("StyleBoxTexture_8qcyx")

[node name="Right_Button" type="Button" parent="Panel/Background"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.501
anchor_right = 1.0
anchor_bottom = 0.501
offset_left = -144.0
offset_top = -49.72
offset_right = -51.0
offset_bottom = 49.28
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_xkl6m")
theme_override_styles/disabled = SubResource("StyleBoxTexture_p0vqm")
theme_override_styles/hover = SubResource("StyleBoxTexture_bnrpt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xkl6m")
theme_override_styles/normal = SubResource("StyleBoxTexture_p0vqm")

[connection signal="selected" from="Panel/Background/StoryBookContent/StorybookPage" to="." method="_on_storybook_page_selected"]
[connection signal="pressed" from="Panel/Background/StoryBookContent/BackButton" to="." method="_on_back_button_pressed"]
